--- a/assignment1_100996193.ipynb
+++ b/assignment1_100996193.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Author: <YOUR REAL FIRST AND LAST NAME>\n",
+    "Author: Becky Pollard\n",
     "Assignment: #1\n",
     "\"\"\""
    ]
